@@ -1,5 +1,5 @@
 Package: ENmix
-Version: 1.7.2
+Version: 1.7.3
 Date: 2015-10-22
 Title: Data preprocessing and quality control for Illumina 
        HumanMethylation450 BeadChip
